# fdk-mail-sender-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: build-staging.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml  test&build.yaml
src/: error.rs  mailtest.rs  main.rs  metrics.rs
src/models/: error.rs  mail.rs  mod.rs
