[package]
name = "fdk-mail-sender-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
cronjob = "0.4.17"
lazy_static = "1.4.0"
lettre = "0.11.7"
prometheus = "0.13.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json"] }
