[package]
name = "fdk-mail-sender-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
cronjob = "0.4.17"
lazy_static = "1.5.0"
lettre = "0.11.19"
prometheus = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
